test/corpus/BSV_comments.txt
==============
block comments
==============

/* a block comment */

/* a multi
 line
 block comment */

package EmptyPackage; /*

and here

as

well */

endpackage

/* and
 after too */

--------------

(bsv_package
  (bsv_block_comment)
  (bsv_block_comment)
  (bsv_packageIde)
  (bsv_block_comment)
  (bsv_block_comment))

=============
line comments
=============

// a line comment

package EmptyPackage; // a line comment

// a line comment

endpackage

// again

-------------

(bsv_package
  (bsv_line_comment)
  (bsv_packageIde)
  (bsv_line_comment)
  (bsv_line_comment)
  (bsv_line_comment))
