test/corpus/BSV_empty_package.txt
=============
Empty package
=============

package EmptyPackage;
endpackage

-------------

(bsv_package
  (bsv_packageIde))

=============
Empty package with comment
=============

// Packages without specified package endpackages should parse

-------------

(bsv_package
  (bsv_line_comment))
