test/corpus/BSV_simple_function_definition.txt
==========================
Simple function definition
==========================

package OneFunctionPackage;

function A f (B someArgument);
  return someComputation;
endfunction

endpackage

------------------------

(bsv_package
  (bsv_packageIde)
  (bsv_packageStmt
    (bsv_functionDef
      (bsv_functionProto
        (bsv_type
          (bsv_typeIde
            (bsv_typeConcreteIde)))
        (bsv_functionIde)
        (bsv_functionFormal
          (bsv_type
            (bsv_typeIde
              (bsv_typeConcreteIde)))
          (bsv_paramIde)))
      (bsv_functionBody
        (bsv_functionBodyStmt
          (bsv_returnStmt
            (bsv_expression
              (bsv_exprPrimary))))))))
