test/corpus/BSV_typeclass.txt
=====================
Typeclass declaration
=====================

package TypeclassPackage;

typeclass SomeClass#(type a, numeric type b, type c)
  provisos (Constraint#(a, b))
  dependencies (a determines (b, a));
  function a f (c x);
  module mkSmthg (Bit#(b));
  c var;
endtypeclass: SomeClass

endpackage

---------------------

(bsv_package
  (bsv_packageIde)
  (bsv_packageStmt
    (bsv_typeclassDef
      (bsv_typeclassIde)
      (bsv_typeFormals
        (bsv_typeVarIde)
        (bsv_typeVarIde)
        (bsv_typeVarIde))
      (bsv_provisos
        (bsv_proviso
          (bsv_typeclassIde)
          (bsv_type
            (bsv_typeIde
              (bsv_typeVarIde)))
          (bsv_type
            (bsv_typeIde
              (bsv_typeVarIde)))))
      (bsv_typedepends
        (bsv_typedepend
          (bsv_typelist
            (bsv_typeVarIde))
          (bsv_typelist
            (bsv_typeVarIde)
            (bsv_typeVarIde))))
      (bsv_overloadedDef
        (bsv_functionProto
          (bsv_type
            (bsv_typeIde
              (bsv_typeVarIde)))
          (bsv_functionFormal
            (bsv_type
              (bsv_typeIde
                (bsv_typeVarIde))))))
      (bsv_overloadedDef
        (bsv_moduleProto
          (bsv_moduleFormalArgs
            (bsv_type
              (bsv_typeIde
                (bsv_typeConcreteIde))
              (bsv_type
                (bsv_typeIde
                  (bsv_typeVarIde)))))))
      (bsv_overloadedDef
        (bsv_varDecl
          (bsv_type
            (bsv_typeIde
              (bsv_typeVarIde)))
          (bsv_varInit)))
      (bsv_typeclassIde))))

==============================
Typeclass instance declaration
==============================

package TypeclassInstancePackage;

instance SomeClass#(SomeType#(a,B)) provisos (Constraint#(a, B));
  function a f (B x); return 10; endfunction
  module mkSmthg (Bit#(a));
  endmodule
  var = ?;
endinstance: SomeClass

endpackage

------------------------------

(bsv_package
  (bsv_packageIde)
  (bsv_packageStmt
    (bsv_typeclassInstanceDef
      (bsv_typeclassIde)
      (bsv_type
        (bsv_typeIde
          (bsv_typeConcreteIde))
        (bsv_type
          (bsv_typeIde
            (bsv_typeVarIde)))
        (bsv_type
          (bsv_typeIde
            (bsv_typeConcreteIde))))
      (bsv_provisos
        (bsv_proviso
          (bsv_typeclassIde)
          (bsv_type
            (bsv_typeIde
              (bsv_typeVarIde)))
          (bsv_type
            (bsv_typeIde
              (bsv_typeConcreteIde)))))
      (bsv_functionDef
        (bsv_functionProto
          (bsv_type
            (bsv_typeIde
              (bsv_typeVarIde)))
          (bsv_functionFormal
            (bsv_type
              (bsv_typeIde
                (bsv_typeConcreteIde)))))
        (bsv_functionBody
          (bsv_functionBodyStmt
            (bsv_returnStmt
              (bsv_expression
                (bsv_exprPrimary
                  (bsv_intLiteral
                    (bsv_unsizedIntLiteral))))))))
      (bsv_moduleDef
        (bsv_moduleProto
          (bsv_moduleFormalArgs
            (bsv_type
              (bsv_typeIde
                (bsv_typeConcreteIde))
              (bsv_type
                (bsv_typeIde
                  (bsv_typeVarIde)))))))
      (bsv_varAssign
        (bsv_lValue)
        (bsv_expression
          (bsv_exprPrimary)))
      (bsv_typeclassIde))))
