test/corpus/expression/BSV_bit.txt
============================
Bit concatenation expression
============================

package BitConcatenation;

Bit#(33) x = { a, b };
Bit#(33) x = { a, b, { c, d } };

endpackage

----------------------------

(bsv_package
  (bsv_packageIde)
  (bsv_packageStmt
    (bsv_varDecl
      (bsv_type
        (bsv_typeIde
          (bsv_typeConcreteIde))
        (bsv_type
          (bsv_typeNat)))
      (bsv_varInit
        (bsv_varIde)
        (bsv_expression
          (bsv_exprPrimary
            (bsv_bitConcat
              (bsv_expression
                (bsv_exprPrimary))
              (bsv_expression
                (bsv_exprPrimary))))))))
  (bsv_packageStmt
    (bsv_varDecl
      (bsv_type
        (bsv_typeIde
          (bsv_typeConcreteIde))
        (bsv_type
          (bsv_typeNat)))
      (bsv_varInit
        (bsv_varIde)
        (bsv_expression
          (bsv_exprPrimary
            (bsv_bitConcat
              (bsv_expression
                (bsv_exprPrimary))
              (bsv_expression
                (bsv_exprPrimary))
              (bsv_expression
                (bsv_exprPrimary
                  (bsv_bitConcat
                    (bsv_expression
                      (bsv_exprPrimary))
                    (bsv_expression
                      (bsv_exprPrimary))))))))))))

=====================
Bit select expression
=====================

package BitSelection;

Bit#(33) x = a[230:30];
Bit#(33) x = a[b:c[d:10]];

endpackage

---------------------

(bsv_package
  (bsv_packageIde)
  (bsv_packageStmt
    (bsv_varDecl
      (bsv_type
        (bsv_typeIde
          (bsv_typeConcreteIde))
        (bsv_type
          (bsv_typeNat)))
      (bsv_varInit
        (bsv_varIde)
        (bsv_expression
          (bsv_exprPrimary
            (bsv_bitSelect
              (bsv_exprPrimary)
              (bsv_expression
                (bsv_exprPrimary
                  (bsv_intLiteral
                    (bsv_unsizedIntLiteral))))
              (bsv_expression
                (bsv_exprPrimary
                  (bsv_intLiteral
                    (bsv_unsizedIntLiteral))))))))))
  (bsv_packageStmt
    (bsv_varDecl
      (bsv_type
        (bsv_typeIde
          (bsv_typeConcreteIde))
        (bsv_type
          (bsv_typeNat)))
      (bsv_varInit
        (bsv_varIde)
        (bsv_expression
          (bsv_exprPrimary
            (bsv_bitSelect
              (bsv_exprPrimary)
              (bsv_expression
                (bsv_exprPrimary))
              (bsv_expression
                (bsv_exprPrimary
                  (bsv_bitSelect
                    (bsv_exprPrimary)
                    (bsv_expression
                      (bsv_exprPrimary))
                    (bsv_expression
                      (bsv_exprPrimary
                        (bsv_intLiteral
                          (bsv_unsizedIntLiteral))))))))))))))
